refactored code to use phidget22 library, customized slider display and added position updates as plate moves